@@ -6,8 +6,8 @@ CF_MODEL = r"""^(
     [A-Za-z]{6}[0-9LMNPQRSTUV]{2}[A-Za-z]{1}[0-9LMNPQRSTUV]{2}[A-Za-z]{1}[0-9LMNPQRSTUV]{3}[A-Za-z]{1} |
     [0-9]{11,11}
 )$"""
-ACTORS_MODEL = r"""^\s*(?P<ragione_sociale>.+)\s+(?P<cf>[a-zA-Z0-9]{11,})\s*$"""
-GROUP_ACTORS_MODEL = r"""^\s*(?P<ragione_sociale>.+)\s+(?P<cf>[a-zA-Z0-9]{11,})\s*(?:\(\s*(?P<ruolo>[A-Z0-9-]+)?\s*\))\s*$"""
+ACTORS_MODEL = r"""^\s*(((?P<ragione_sociale1>[^0-9].+)\s+(?P<cf1>[a-zA-Z0-9]{11,}))|((?P<cf2>[a-zA-Z0-9]{11,})\s+(?P<ragione_sociale2>[\(^0-9].+)))\s*$"""
+GROUP_ACTORS_MODEL = r"""^\s*(((?P<ragione_sociale1>[^0-9].+)\s+(?P<cf1>[a-zA-Z0-9]{11,}))|((?P<cf2>[a-zA-Z0-9]{11,})\s+(?P<ragione_sociale2>[^0-9].+)))\s*\(\s*(?P<ruolo>[A-Z0-9-]+)\s*\)\s*$"""
 DATES_MODEL = r"""^\s*(?P<start>\d\d\d\d-\d\d-\d\d)\s*[;\-/_ ]\s*(?P<end>\d\d\d\d-\d\d-\d\d)\s*$"""
 IT_DATES_MODEL = r"""^\s*(?P<start_day>\d{1,2})[\-/](?P<start_month>\d{1,2})[\-/](?P<start_year>\d{4})\s*[;\-/_ ]\s*(?P<end_day>\d{1,2})[\-/](?P<end_month>\d{1,2})[\-/](?P<end_year>\d{4})\s*$""" 
 
